symbolline drawing order in graph key (cf. bug #990687)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/branches/pyx_0_6_patches/pyx@1801 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -72,6 +72,8 @@ TODO:
    - graph/axis module:
      - fix errorbar range adjustment
      - fix empty tick lists bug (reported by Marko Vendelin, cf. bug #977323)
+   - graph/style module:
+     - symbolline drawing order in graph key (cf. bug #990687)
 
 
 0.6.3 (2004/04/27):
