installing to a non-standard directory layout
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1803 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,7 @@
 Installation
 ============
 
+
 Prerequisites
 -------------
 
@@ -8,15 +9,18 @@ PyX needs Python 2.x and a TeX installation (including Type1 fonts). Try to
 start 'python', 'tex' and 'kpsewhich cmr10.pfb' (the later should issue a full
 path of the requested Type1 font).
 
+
 Local usage without C extension modules
 ---------------------------------------
 
-PyX can be run without any installation. Copy the file hello.py from the
-examples directory to the main pyx directory and type 'python hello.py'. When
-your TeX installation isn't configured to use Type1 fonts by default, you may
-have to insert the line 'text.set(fontmaps="psfonts.cmz")' after the pyx import
+PyX can be run without any installation. To test your environment copy the file
+hello.py from the examples directory to the main pyx directory (where the
+subdirectory pyx containing the modules is located) and type 'python hello.py'.
+When your TeX installation isn't configured to use Type1 fonts by default, you
+may have to insert the line 'text.set(fontmaps="psfonts.cmz")' after the import
 statement and try again. See the FAQ for further details about TeX and font
 configuration issues.
+
 
 Installation procedure
 ----------------------
@@ -54,6 +58,19 @@ or install PyX system wide by using
 
 or an appropriate variant thereof.
 
+
+Path setup when installing to a non-standard directory layout
+-------------------------------------------------------------
+
+PyX places shared data in the directory <install-dir>/share/pyx and the system
+wide configuration in the file <root>/etc/pyxrc. <install-dir> and <root> are
+options to the distutils install-data command (and thus the install command).
+See the distutils documentation for details. The final path information is
+stored in siteconfig.py. While the original siteconfig.py calculates the
+positions relative to its current position thus enabling local usage, during
+install a proper siteconfig.py will be created.
+
+
 Compiling the manual
 --------------------
 
@@ -66,8 +83,8 @@ into the manual directory
     ln -s </usr/lib/>python/Doc/tools/mkhowto mkhowto
     make
 
-Note that this requires Python version 2.3. In former versions (2.2 and 2.1)
-you will need to get the Python sources from www.python.org and try to find the
-script there. For users of the older Python versions we have included a
-ready-made pdf of the manual.
+Note that this requires Python version 2.3 and above. In former versions you
+will need to get the Python documentation sources separately from
+http://www.python.org and try to find the script there. Alternatively you may
+download the manual from the PyX homepage at http://pyx.sourceforge.net/.
 
