--- a/CHANGES
+++ b/CHANGES
@@ -51,7 +51,7 @@ TODO:
     - is the early conversion with unit.topt unit-modification-save?
   - deformer module:
     - better names for the helper functions ?
-    - add functionality to canvas.draw
+    - should deformers or trafos be applied first?
   - open discussion:
     - clearly distingish between readers and writers. dvifile, epsfile, etc. might
       be renamed to dvireader, epsreader ...
