\code in \section does not work
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1864 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -115,7 +115,7 @@ continuous development quite clearly. The basic parts of a graph are:
   subtasks. Axes are discussed separately in chapter~\ref{axis}.
 \end{definitions}
 
-\section{Module \code{graph/graph}: X-Y-Graphs}
+\section{Module graph/graph: X-Y-Graphs}
 \label{graph:graph}
 
 \declaremodule{}{graph.graph}
@@ -290,7 +290,7 @@ as \class{graphxy} methods \code{Xbasepath}, \code{Xvbasepath},
 \code{Xvtickpoint}, \code{Xtickdirection}, and \code{Xvtickdirection}
 where the prefix \code{X} stands for \code{x} and \code{y}.
 
-\section{Module \code{graph/data}: Data}
+\section{Module graph/data: Data}
 \label{graph:data}
 
 \declaremodule{}{graph.data}
@@ -504,7 +504,7 @@ For the sake of completeness we list the default patterns:
   the same code.
 \end{classdesc}
 
-\section{Module \code{graph/style}: Styles}
+\section{Module graph/style: Styles}
 \label{graph:style}
 
 \declaremodule{}{graph.style}
@@ -730,7 +730,7 @@ defined as:
   both possibilities, you may use nested changeable styles.
 \end{classdesc}
 
-\section{Module \code{graph/key}: Keys}
+\section{Module graph/key: Keys}
 \label{graph:key}
 
 \declaremodule{}{graph.key}
