--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,8 @@ TODO:
     - common bboxes for different graphs
     - 3d graphs, circular graphs
     - axis painter labelattrs=None + automatic axis partitioning leads to no valid partitioning
+    - default titles of the data should try to be valid TeX expressions (handle "_" etc.)
+    - when all titles are None, a graph key currently raises an exception
   - graph.style and graph.data modules
     - exceptions in drawsymbol & friends...
     - fix docu (or code) of gridattrs functionality of axis painters
