--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ TODO:
     - axis painter labelattrs=None + automatic axis partitioning leads to no valid partitioning
     - default titles of the data should try to be valid TeX expressions (handle "_" etc.)
     - when all titles are None, a graph key currently raises an exception
+    - translatecanvas should be the default in graph.style.symbol
   - graph.style and graph.data modules
     - exceptions in drawsymbol & friends...
     - fix docu (or code) of gridattrs functionality of axis painters
