alternative texts for chapters and sections using the command LaTeX
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1875 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/text.tex
+++ b/manual/text.tex
@@ -1,4 +1,4 @@
-\chapter{Module \module{text}: \TeX/\LaTeX{} interface}
+\chapter[Module \module{text}: TeX/LaTeX interface]{Module \module{text}: \TeX/\LaTeX{} interface}
 \label{module:text}
 
 \section{Basic functionality}
@@ -111,7 +111,7 @@ method to allow for new \verb|preamble| settings as well. The
 \verb|reset| method takes a boolean parameter \verb|reinit| which can
 be set to run the old preamble settings.
 
-\section{\TeX/\LaTeX{} attributes}
+\section[TeX/LaTeX attributes]{\TeX/\LaTeX{} attributes}
 
 \begin{description}
 \raggedright
@@ -154,7 +154,7 @@ in \verb|\displaystyle| (\verb|nomathmode| removes this attribute)
 \verb|size.Huge=size(5)|
 \end{description}
 
-\section{Using the graphics-bundle with \LaTeX}
+\section[Using the graphics-bundle with LaTeX]{Using the graphics-bundle with \LaTeX}
 
 The packages in the \LaTeX-graphics bundle (color.sty, graphics.sty,
 graphicx.sty, \ldots) make extensive use of \verb|\special| commands.
@@ -213,7 +213,7 @@ For reference purpose, the following specials can be handled by the
 \endgroup
 
 
-\section{\TeX/\LaTeX{} message parsers}
+\section[TeX/LaTeX message parsers]{\TeX/\LaTeX{} message parsers}
 
 Message parsers are used to scan the output of \TeX/\LaTeX. The output
 is analysed by a sequence of message parsers. Each of them analyses
