--- a/CHANGES
+++ b/CHANGES
@@ -108,6 +108,7 @@ TODO:
   - text module:
     - postpone reading of fontmap files until TeX/LaTeX is started
     - sign of font number in dvifile (reported by Michael Gruber)
+    - phantom attribute (TODO documentation)
   - canvas module:
     - added new classes page and document for multipage PostScript output
     - apply deformers (instead of trafos) in draw method
@@ -118,7 +119,7 @@ TODO:
     - create siteconfig on install to store positions of the shared data
       and the global pyxrc
   - graph modules:
-    - graph style + data reorganization
+    - graph style + data reorganization (TODO: documentation)
     - enum -> num renaming
     - allow for horizontally and vertically centered graph key alignment (TODO: documentation)
     - fix bug that graph was not finished automatically when a bbox was specified
@@ -157,6 +158,10 @@ TODO:
    - graph/axis module:
      - fix errorbar range adjustment
      - fix empty tick lists bug (reported by Marko Vendelin, cf. bug #977323)
+   - graph/style module:
+     - symbolline drawing order in graph key (cf. bug #990687)
+   - graph/data module:
+     - access to builtin list (reported by Marcus Mendenhall, cf. bug #1042458)
 
 
 0.6.3 (2004/04/27):
